# rl-chunk-pusht

./: .gitignore  LICENSE  README.md  pyproject.toml
nautilus/: README.md
nautilus/manifests/: dev-pod.yaml  pvc.yaml  train-job-position-c8.yaml  train-job-velocity-c8.yaml
nautilus/scripts/: bootstrap_dev_pod.sh  setup_env.sh  smoke_train.sh  train.sh
src/rl_chunk_pusht/: __init__.py  configs.py  evaluation.py  networks.py  train.py  visualize.py
src/rl_chunk_pusht/agents/: __init__.py  acfql.py  acrlpd.py
src/rl_chunk_pusht/data/: __init__.py  pusht_demos.py
src/rl_chunk_pusht/envs/: __init__.py  pusht.py
src/rl_chunk_pusht/utils/: __init__.py  datasets.py  flax_utils.py  logging.py
tests/: test_agents.py  test_configs.py  test_datasets.py  test_envs.py
